--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>嘉仁手刻測試</title>
     <style>
         *{
             /* border: solid 1px #000; */
             position: relative;
             font-family: '微軟正黑體';
-            font-weight: 600;
             color: rgb(94, 93, 93);
+            font-weight: 900;
         }
         html,body{
             width: 100%;
@@ -95,7 +95,7 @@
         }
 
         .dollar{
-            line-height: 30px;
+            line-height: 40px;
             justify-content:flex-start;
         }
 
@@ -109,7 +109,7 @@
         }
 
         .add img, .less img{
-            width: 20px;
+            width: 30px;
         }
 
         .add,.notes,.less{
@@ -119,6 +119,8 @@
 
         .notes{
             text-align: center;
+            line-height: 30px;
+            font-weight: 1200;
         }
 
     </style>
